# fastapi-holistic

./: .env-local-defaults  Dockerfile  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml  requirements-build.txt
.github/workflows/: lint_test.yaml
config/tools/: .coveragerc  .flake8  .isort.cfg  black.toml  mypy.ini  pip.conf  pylintrc  pytest.ini
docs/: deployment.md  index.md
scripts/: gunicorn_conf.py
src/app/: __init__.py  app.py  deps.py  exceptions.py  settings.py
src/app/database/: base.py  probes.py  session.py
src/app/database/migrations/: cli.py  env.py  script.py.mako
src/app/models/: __init__.py
src/app/routers/: __init__.py  migrations.py  probes.py
src/app/routers/api_v1/: __init__.py  items.py
src/app/routers/tests/: __init__.py  database.py  error.py
src/fastapi_laser/: exception_ext.py  fastapi_ext.py  gcp.py  logging_ext.py  pydantic_ext.py  type_ext.py  utils.py
src/fastapi_laser/alembic_ext/: decorators.py  metadata.py  migrations.py  steps.py
tasks/: __init__.py  benchmarks.py  containers.py  packaging.py  run.py  utils.py  validation.py
tasks_alt/: __init__.py  _collections.py  _invoke.py  _pipx.py  _utils.py  app.py  config.py  poetry.py  requirements.py  venv.py
tasks_alt/containers/: __init__.py  app.py  docker_utils.py  images.py  networks.py
tests/: conftest.py
tests/app/: conftest.py
