[tool.poetry]
name = "fastapi-holistic"
version = "0.1.0"
description = "A holistic approach to back end service development with FastAPI"
authors = ["Teodor Dumitrescu"]
license = "MIT"
packages = [
    { include = "app", from = "src" },
    { include = "fastapi_laser", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
SQLAlchemy = "^1.4.37"
loguru = "^0.6.0"
alembic = "^1.8.0"
typer = "^0.4.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint = "^2.14.4"
autoflake = "^1.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pytest-asyncio = "^0.18.3"
pytest-mock = "^3.8.2"
pytest-recording = "^0.12.1"
freezegun = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# TODO: add db migration and probe script target modules
app-db-probe = "app.database.probes:health_check"
app-db-migrations = "app.database.migrations.cli:cli"
